# pygame_samples

./: README.md  demo_01.py  demo_01A1z.py  demo_02.py  demo_03.py  demo_04.py  demo_LCD_font.py  demo_dot_matrix_key0.py  demo_dot_matrix_mc0.py  demo_dot_matrix_pg0.py  demo_dot_matrix_pg1.py  demo_dot_matrix_scan0.py  demo_monthly_calendar.py  demo_moving_dot_mc.py  demo_moving_dot_pg.py  dot_matrix.py  dot_matrix_README.py  lcd_font_pg.py  param_MCJE.py  pyproject.toml
fonts/: LCDfont_5x7.txt
